appId: com.logseq.ocamldemo
---
- launchApp
- assertVisible:
    id: "button.sidebar"
- tapOn:
    id: "button.sidebar"
- assertVisible:
    id: "button.sidebar.dismiss"
- pressKey: BACK
- assertNotVisible:
    id: "button.sidebar.dismiss"
- assertVisible:
    id: "field.tasks.draft"
- pressKey: BACK
- assertNotVisible:
    id: "button.sidebar"
